Fix market dropdown trigger alignment
The trigger sat 3px taller than sibling nav items because the inline-flex
label added baseline descender space inside the button's block content
wrapper. Make the content wrapper flex, and size the globe to 1em to match
the regular language dropdown.

--- a/src/modules/Header/ui/MarketsPanel/MarketsPanel.module.scss
+++ b/src/modules/Header/ui/MarketsPanel/MarketsPanel.module.scss
@@ -13,6 +13,11 @@
     }
 }
 
+.triggerContent {
+    display: flex;
+    align-items: center;
+}
+
 .triggerLabel {
     display: inline-flex;
     align-items: center;
@@ -21,8 +26,8 @@
 }
 
 .icon {
-    width: 1.125rem;
-    height: 1.125rem;
+    width: 1em;
+    height: 1em;
 }
 
 .dropdown {
